fix(release): add missing git step

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -60,6 +60,17 @@
         "changelogFile": "CHANGELOG.md",
         "changelogTitle": "# Semantic Versioning Changelog"
       }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "CHANGELOG.md"
+        ],
+        "message": "build(release): new version ${nextRelease.version}"
+      }
     ]
   ],
   "dryRun": false,
