--- a/.releaserc.json
+++ b/.releaserc.json
@@ -71,6 +71,9 @@
         ],
         "message": "build(release): new version ${nextRelease.version}"
       }
+    ],
+    [
+      "@semantic-release/github"
     ]
   ],
   "dryRun": false,
