feat(release): add custom scripts

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -53,7 +53,7 @@
           "linkReferences": true,
           "commit": "commits",
           "issue": "issues",
-          "includeDetails": true,
+          "includeDetails": false,
           "ignoreReverted": false
         },
         "linkCompare": true,
