--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "@semantic-release/exec": "^3.3.7",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
-    "compare-func": "^2.0.0",
-    "fs": "0.0.1-security",
-    "q": "^1.5.1",
+    "conventional-changelog-conventionalcommits": "^4.3.0",
     "semantic-release": "^17.0.8"
   }
 }
