--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@semantic-release/exec": "^3.3.7",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
-    "conventional-changelog-conventionalcommits": "^4.3.0",
+    "@sonia-corporation/conventional-changelog": "^1.0.1",
     "semantic-release": "^17.0.8"
   }
 }
